Обновление иконок, README и .gitignore, добавлена лицензия
- Обновлены иконки приложения (ic_launcher):
    - Добавлены векторные версии для adaptive-icon (ic_launcher.xml, ic_launcher_round.xml) в `mipmap-anydpi-v26`.
    - Обновлены растровые версии иконок (ic_launcher.webp, ic_launcher_round.webp) в различных плотностях (hdpi, mdpi, xhdpi, xxhdpi, xxxhdpi).
    - Добавлены файлы переднего плана иконок (ic_launcher_foreground.webp) в различных плотностях.
    - Изменён фон иконки `ic_launcher_background.xml`.
    - Удалены старые версии `mipmap-anydpi/ic_launcher.xml` и `mipmap-anydpi/ic_launcher_round.xml`.
    - Добавлена иконка для Play Store (`ic_launcher-playstore.png`).
- Обновлён файл `README.md`:
    - Добавлены значки (shields) для APK, языка и лицензии.
    - Добавлен раздел "Скачать APK" с кнопкой для загрузки.
    - Изменены размеры изображений в таблице скриншотов.
    - Обновлена структура и содержание раздела "Roadmap", разделены "Ближайшие улучшения" и "Идеи для будущего".
- Существенно расширен файл `.gitignore` для улучшения игнорирования специфичных для Android Studio, Java, Kotlin, MacOS, Gradle, а также различных сборочных артефактов, логов и файлов подписи.
- Добавлен файл лицензии `LICENSE` (MIT License).
- Удалён неиспользуемый файл меню `dish_context_menu.xml`.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# Java/Android Studio
+# =============================
+# Java / Android Studio
+# =============================
 *.iml
 .gradle/
 local.properties
@@ -7,26 +9,83 @@ local.properties
 !.idea/.gitignore
 !.idea/.name
 
+# =============================
 # MacOS
+# =============================
 .DS_Store
+.AppleDouble
+.LSOverride
 
+# =============================
 # Build directories
+# =============================
 /build/
-captures/
-.externalNativeBuild/
-.cxx/
+/captures/
+/.externalNativeBuild/
+/.cxx/
+/outputs/
+*/build/
 
+# =============================
 # Log files
+# =============================
 *.log
 
+# =============================
 # Gradle
+# =============================
 .gradle/
 build/
+!gradle-wrapper.jar
+!gradlew
+!gradlew.bat
 
+# =============================
 # Signing files
+# =============================
 *.jks
 *.keystore
 key.properties
 
-# Kotlin specific
+# =============================
+# Kotlin
+# =============================
 *.kotlin_module
+
+# =============================
+# APKs, AABs, Generated binaries
+# =============================
+*.apk
+*.ap_
+*.aab
+*.dex
+*.class
+*.jar
+*.so
+*.nar
+*.war
+*.ear
+*.iml
+*.hprof
+
+# =============================
+# Android Studio / IntelliJ
+# =============================
+.idea/
+*.iws
+*.ipr
+*.iml
+.gradle
+/build
+/captures
+.externalNativeBuild
+.cxx
+
+# =============================
+# OS Files
+# =============================
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+*.swp
+*~.nib
